--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,10 @@
     color: var(--foreground);
     background: var(--background);
   }
+  .light{
+    --background: #ededed;
+    --foreground: #0a0a0a;
+  }
 
 @layer base {
   :root {
