--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
     @apply max-w-screen-xl md:px-3 px-5  mx-auto;
   }
   .para {
-    @apply mb-3 text-base;
+    @apply mb-6 text-[19px];
   }
 }
 
