--- a/app/globals.css
+++ b/app/globals.css
@@ -26,8 +26,8 @@
     background: var(--background);
   }
   .light{
-    --background: #ededed;
-    --foreground: #0a0a0a;
+    --background: #fff;
+    --foreground: #040404;
   }
 
 @layer base {
